tests/neg-custom-args/captures/i15772.check
-- Error: tests/neg-custom-args/captures/i15772.scala:19:26 ------------------------------------------------------------
19 |    val c : C^{x} = new C(x)  // error
   |                          ^
   |                          (x : C^) cannot be referenced here; it is not included in the allowed capture set {}
   |                          of an enclosing function literal with expected type () -> Int
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:20:46 ---------------------------------------
20 |    val boxed1 : ((C^) => Unit) -> Unit = box1(c)  // error
   |                                          ^^^^^^^
   |                                          Found:    (C{val arg: C^}^{c} => Unit) ->{c} Unit
   |                                          Required: (C^ => Unit) -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/i15772.scala:26:26 ------------------------------------------------------------
26 |    val c : C^{x} = new C(x) // error
   |                          ^
   |                          (x : C^) cannot be referenced here; it is not included in the allowed capture set {}
   |                          of an enclosing function literal with expected type () -> Int
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:27:35 ---------------------------------------
27 |    val boxed2 : Observe[C^] = box2(c)  // error
   |                               ^^^^^^^
   |                               Found:    (C{val arg: C^}^{c} => Unit) ->{c} Unit
   |                               Required: (C^ => Unit) -> Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:33:34 ---------------------------------------
33 |  val boxed2 : Observe[C]^ = box2(c) // error
   |                                  ^
   |                                  Found:    box C^
   |                                  Required: box C{val arg: C^?}^?
   |
   |                                  Note that the universal capability `cap`
   |                                  cannot be included in capture set ?
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/i15772.scala:44:2 ----------------------------------------
44 |  x: (() -> Unit) // error
   |  ^
   |  Found:    (x : () ->{filesList, sayHello} Unit)
   |  Required: () -> Unit
   |
   | longer explanation available when compiling with `-explain`
